@@ -85,6 +85,7 @@ import org.fenixedu.commons.i18n.LocalizedString;
 import org.fenixedu.treasury.domain.FinantialEntity;
 import org.fenixedu.treasury.domain.Product;
 import org.fenixedu.treasury.domain.document.DebitEntry;
+import org.fenixedu.treasury.domain.document.SettlementNote;
 import org.fenixedu.treasury.domain.event.TreasuryEvent;
 import org.fenixedu.treasury.domain.exceptions.TreasuryDomainException;
 import org.fenixedu.treasury.domain.exemption.TreasuryExemption;
@@ -1411,7 +1412,14 @@ public class AcademicTreasuryEvent extends AcademicTreasuryEvent_Base implements
     }
 
     @Override
-    public void invokeSettlementCallbacks() {
+    public void invokeSettlementCallbacks(SettlementNote settlementNote) {
+        if (isForTreasuryEventTarget()) {
+            ((IAcademicTreasuryTarget) getTreasuryEventTarget()).handleSettlement(this);
+        }
+    }
+    
+    @Override
+    public void invokeSettlementCallbacks(TreasuryExemption treasuryExemption) {
         if (isForTreasuryEventTarget()) {
             ((IAcademicTreasuryTarget) getTreasuryEventTarget()).handleSettlement(this);
         }
