@@ -1,3 +1,5 @@
+- Refactor: Split TreasuryEvent::invokeSettlementCallbacks method in two, one receiving the settlement note and other the treasury exemption
+
 8.5.4 (15-12-2022)
 - Improvement: Check if there is already an active customer with the same fiscal number, only within the instances of the subclasses AdhocCustomer and PersonCustomer
 - Improvement: Allow set code in Reservation Tax, in creation and edition
